<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorAccent"
    tools:context=".HomeActivity">
    
    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header1"
                android:gravity="center"
                android:textSize="45sp"
                android:textColor="@color/colorPrimaryDark"
                />

            <Button
                android:id="@+id/btnRiceAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="55dp"
                android:text="@string/lblRiceAmt"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/cookTime"
                />

            <TextView
                android:id="@+id/lblCookLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:onClick="checkService"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblMachineStat"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/lblMachineStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standBy1"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@color/colorStandby"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/riceLevel"
                android:textSize="30sp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/lblRiceLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lowStatus1"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/milkWhite"
                android:background="@color/colorCooking"
                android:textStyle="bold"
                />
        </LinearLayout>

    </ScrollView>


</LinearLayout>