<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">
    <!--
    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/webView1"></WebView>
    -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/image1"
        android:padding="13dp"
        android:src="@drawable/logo"
        />
    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        />
    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Connect"-->
    <!--android:id="@+id/btnStart"-->
    <!--/>-->
    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="ON"-->
    <!--android:id="@+id/btnOn"-->
    <!--/>-->
    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="OFF"-->
    <!--android:id="@+id/btnOff"-->
    <!--/>-->
    <!--android:onClick="startService"-->
    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/btnStop"/>-->
    <!--android:onClick="stopService"-->

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/ok"
        android:id="@+id/btnTest"/>-->
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:text="@string/ok"
            />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
</LinearLayout>